--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -40,7 +40,7 @@ jobs:
         id: metadata
         with:
           images: |
-            meetwq/meme-generator
+            gilessnhr/meme-generator
             ghcr.io/${{ github.repository }}
           tags: |
             type=ref,event=branch
